--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fix JavaScript, React & Next.js Bugs Fast — Fiverr Expert</title>
-    <meta name="description" content="Get quick debugging and error fixes for JavaScript, React, Next.js, HTML, CSS, Tailwind, and UI issues. 5-star Fiverr expert. Starting at $15." />
+    
+    <!-- SEO & Social Media Tags -->
+    <title>FixFlow Agency | Enterprise Web Development & Maintenance</title>
+    <meta name="description" content="We engineer digital excellence. FixFlow Agency provides enterprise-grade web development, security audits, and scalable infrastructure for growing businesses." />
+    
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fixflow.agency/" />
+    <meta property="og:title" content="FixFlow Agency | Engineering Digital Excellence" />
+    <meta property="og:description" content="Your dedicated engineering team for React, Next.js, and modern web infrastructure. Security, performance, and growth." />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://fixflow.agency/" />
+    <meta property="twitter:title" content="FixFlow Agency | Engineering Digital Excellence" />
+    <meta property="twitter:description" content="Your dedicated engineering team for React, Next.js, and modern web infrastructure." />
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
